--- a/src/css/HomeHeader.css
+++ b/src/css/HomeHeader.css
@@ -6,9 +6,9 @@
     border-radius: 10px;
     /*filter: saturate(0.9);*/
     text-shadow: 
-         1px 0px 1px #121212, 0px 1px 1px #161616, 
+         /*1px 0px 1px #121212, 0px 1px 1px #161616, 
          2px 1px 1px #121212, 1px 2px 1px #161616,
-         3px 2px 1px #121212, 2px 3px 1px #161616,
+         3px 2px 1px #121212, 2px 3px 1px #161616,*/
          4px 3px 1px #121212, 3px 4px 1px #161616,
          5px 4px 1px #121212, 4px 5px 1px #161616,
          6px 5px 1px #121212, 5px 6px 1px #161616,
