--- a/src/css/rgallery.css
+++ b/src/css/rgallery.css
@@ -143,7 +143,7 @@ body, html, #app {
   margin: 0;
   padding: 1rem 0;
   position: absolute;
-  top: -2em;
+  top: -1.5rem;
   right: -1em;
 }
 .imageview-info button:hover {
